name: monitoring-plugin
version: 0.0.0
synopsis: Create Icinga / Nagios monitoring plugins
license: MIT
license-file: LICENSE
author: Igor Pashev <pashev.igor@gmail.com>
maintainer: Igor Pashev <pashev.igor@gmail.com>
copyright: 2016, Zalora South East Asia Pte. Ltd
category: Web, Monitoring, Metrics
build-type: Simple
extra-source-files: README.md ChangeLog.md
cabal-version: >= 1.20

source-repository head
  type: git
  location: https://github.com/zalora/monitoring-plugin.git

library
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: src
    exposed-modules:
      System.MonitoringPlugin.CheckStatus
      System.MonitoringPlugin.PerfData
      System.MonitoringPlugin.Range
    build-depends:
        base                 >= 4.8 && < 5
      , unordered-containers >= 0.2.6

