name: monitoring-plugin
version: 0.0.0
synopsis: Create Icinga / Nagios monitoring plugins
license: MIT
license-file: LICENSE
author: Igor Pashev <pashev.igor@gmail.com>
maintainer: Igor Pashev <pashev.igor@gmail.com>
copyright: 2016, Zalora South East Asia Pte. Ltd;
 2017, Pashev Igor <pashev.igor@gmail.com>
category: Web, Monitoring, Metrics
build-type: Custom
extra-source-files: README.md ChangeLog.md
cabal-version: >= 1.24

source-repository head
  type: git
  location: https://github.com/ip1981/monitoring-plugin.git

custom-setup
  setup-depends:
      base >= 4.9 && < 5
    , Cabal
    , cabal-doctest >= 1.0.2

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
      base
    , doctest >= 0.11.1
    , bytestring
  ghc-options: -Wall
  hs-source-dirs: test
  default-language: Haskell2010

library
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: src
    exposed-modules:
      System.MonitoringPlugin.CheckStatus
      System.MonitoringPlugin.PerfData
      System.MonitoringPlugin.Range
    build-depends:
        base                 >= 4.8 && < 5
      , unordered-containers >= 0.2.6

